<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/include_versions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tilSignInPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bSignIn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_above="@+id/bGoogleSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:elevation="3dp"
        android:text="@string/sign_in" />

    <RelativeLayout
        android:id="@+id/bGoogleSignIn"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_social_button"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_google_plus" />

            <TextView
                style="@style/LargeBlackTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/google" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>